--- a/index.html
+++ b/index.html
@@ -5,36 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tahir.home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="mane">
         <div class="back">
-            <img height="50" src="gf-logo.png" class="logo">
+            <img src="tahie-removebg-preview.png" class="logo">
             <ul class="menu-list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Badroom</a></li>
                 <li><a href="#">Dinig</a></li>
-                <li><a href="#">Kichen</a></li>
+                <li><a href="#">kitchen
+
+                    </a></li>
                 <li><a href="#">background</a></li>
             </ul>
             <button class="menu-toggle">=</button>
         </div>
+        <hr>
         <div class="heding">
-            <h1>DESING YOUR HOME</h1>
-            <p>If your on the lookout for simple home interior desing look on further then, <br>Homeland for to end
+            <h1>DESIGN YOUR HOME</h1>
+            <p>If your on the lookout for simple home interior design look on further then, <br>Homeland for to end
                 interior
-                desing services.</p>
+                design services.</p>
             <div>
-                <button type="button"><span></span> WATCH MORE</button>
+                <button onclick="document.location='https://youtu.be/Fgbr3J_UAgY'"><span></span> WATCH MORE</button>
                 <button type="button"><span></span> APPLY</button>
+
             </div>
         </div>
     </div>
 
     <script src="./tahir.js"></script>
+
 </body>
 
 </html>
