--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
             <img src="tahie-removebg-preview.png" class="logo">
             <ul class="menu-list">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Badroom</a></li>
+                <li><a href="#">Bedroom</a></li>
                 <li><a href="#">Dinig</a></li>
-                <li><a href="#">kitchen
-
-                    </a></li>
-                <li><a href="#">background</a></li>
+                <li><a href="#">kitchen </a></li>
+                <!-- <li><a href="#">background</a></li> -->
             </ul>
             <button class="menu-toggle">=</button>
         </div>
-        <hr>
         <div class="heding">
             <h1>DESIGN YOUR HOME</h1>
-            <p>If your on the lookout for simple home interior design look on further then, <br>Homeland for to end
-                interior
-                design services.</p>
+            <p>If your on the lookout for simple home interior design look on further then.<br>Homeland for to end
+                interior design services.You have a any project in your minde. You can Call me, Email</p>
+            <pre class="contect">
+     91+81786464014
+     tahirtkd7@gmail.com
+            </pre>
+
             <div>
                 <button onclick="document.location='https://youtu.be/Fgbr3J_UAgY'"><span></span> WATCH MORE</button>
                 <button type="button"><span></span> APPLY</button>
