--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="heding">
             <h1>DESIGN YOUR HOME</h1>
-            <p>If your on the lookout for simple home interior design look on further then.<br>Homeland for to end
+            <p>If your on the lookout for simple home interior design look on further then Homeland for to end
                 interior design services.You have a any project in your minde. You can Call me, Email</p>
             <pre class="contect">
      91+81786464014
